# little-librarian

./: .env.example  .gitignore  app.py  auth.py  config.py  db.py  matcher.py  menubar.py  pyproject.toml  scanner.py  schema.sql
static/: manifest.json  style.css  sw.js
templates/: base.html  book_detail.html  history.html  inventory.html  login.html  scan.html  scan_results.html
